--- a/assets/style.css
+++ b/assets/style.css
@@ -12,7 +12,7 @@ body {
     display: flex;
     flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #003e6d;
+    background-color: #102147;
     color: white;
     text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.83);
 }
@@ -22,14 +22,7 @@ body {
     margin: 0;
     padding: 0;
 }
-.navlink{
-    color:#30c4f9;
-    text-decoration: none;
-  }
-  .navlink:hover{
-    color: white;
-    text-decoration: none;
-  }
+
   
   .navbar{
     background-color: transparent;
@@ -100,7 +93,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    color: #30c4f9;
+    color: #003e6d;
     margin-top: 40px
   }
   
